# GauNMRScaler

./: CMakeLists.txt
include/: GauNMRScaler_sub.h
src/: GauNMRScaler.c  GauNMRScaler_sub.c
